# AgentDecompile

./: .aider.conf.yml  .clinerules  .cursorignore  .cursorrules  .dockerignore  .env.example  .gitignore  .last_image_tag  .remote_image_tag  .tmp-tool-seq.json  .tmp_open_check.py  .tmp_verify_session.py  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPER.md  DEVELOPMENT.md  Docker.aio  Dockerfile  Dockerfile.aio  Dockerfile.ghidra  Dockerfile.ghidra-bsim-server  GEMINI.md  IMPLEMENTATION_SUMMARY.md  INTERNALS.md  LICENSE  MCP_PROTOCOL.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_IMPROVEMENTS.md  README.md  REBRANDING_SUMMARY.md  RELEASE_NOTES_1.0.0.md  RELEASE_NOTES_2.0.0.md  TOOLS_LIST.md  USAGE.md  analysis_output.txt  bootstrap_proxy.py  bootstrap_proxy_test.py  build-and-install.ps1  (+25 more)
.claude/: README.md
.claude-plugin/: marketplace.json
.claude/agents/: reva-setup-installer.md
.claude/hooks/: clone-ghidra-source.sh  install-ghidra-binary.sh  setup-gradle.sh
.contextstream/: config.json
.cursor/commands/: lfg.md
.cursor/plans/: dynamic_output_and_markdown_default_ff00c865.plan.md  fix_list-functions_warning_and_session_id_8f85d79e.plan.md  fix_match-function_index_and_params_5f45bb04.plan.md  fix_shared_project_cli_persistence_b811ed58.plan.md  install_mcp_debugging_docs_aedefb04.plan.md  k1_match-function_migration_script_b408a6e6.plan.md  match-function_cross-binary_robustness_fca18510.plan.md  rename_toolname_to_tool_rich_enum.plan.md  replace_strings_with_enums_a3d84e37.plan.md  replace_strings_with_enums_f5c30ee5.plan.md  shared_local_checkout_sync_e2e_7c2a9f01.plan-deepened.md  shared_local_checkout_sync_e2e_7c2a9f01.plan.md  two-step_modification_conflict_system_05e93dbf.plan.md  youtube-transcript_script_robustness_f69ba86a.plan.md
.cursor/prompts/: ralphy-plan.md
.github/: CI_WORKFLOWS.md  WORKFLOW_SETUP.md  copilot-instructions.md  dependabot.yml
.github/agents/: re-aggregator.agent.md  re-critic.agent.md  re-planner.agent.md  re-worker.agent.md
.github/instructions/: re-artifact-protocol.instructions.md
.github/workflows/: docker-push.yml  publish-ghidra.yml  publish-pypi.yml  test-ghidra.yml  test-headless.yml
.kilocode/rules/: memory-service.md
.memory-service/: config.json
A/: .mcp.json
AgentDecompile/: README.md  pyproject.toml  requirements.txt  setup.cfg
AgentDecompile/src/agentdecompile/: __init__.py  cli.py  core.py  utils.py
AgentDecompile/src/scripts/: analyze.py
AgentDecompile/tests/: test_core.py
config/: reva-headless-example.properties
docker/: build-ghidra-image.ps1  containers.conf.vm  entrypoint-ghidra.sh  entrypoint.sh  ghidra-entrypoint.sh  run-bsim.sh  server.conf  start-ghidra-bsim-server.sh  start-ghidra-server.sh  start-mcp.sh  supervisor-start-bsim.sh  supervisor-wait-then-mcp.sh  supervisor-wrap.sh  supervisord.conf  vm-fix-containers-conf.sh
docs/: API_DOCUMENTATION.md  BATCH_ADD_FIELD_EXAMPLE.md  BUILD_INSTALL.md  CONVENTIONS.md  DISABLED_TOOLS_REFACTORING.md  GHIDRA_PRACTICAL_RE_GUIDE.md  GHIDRA_SCRIPTS_ANALYSIS.md  GHIDRA_SHARED_PROJECT_API.md  IMPORT_EXPORT_GUIDE.md  INDEX.md  INTELLIGENT_FEATURES.md  INTERACTIVE_WORKFLOW_TUTORIAL.md  MCP_CONFIGURATION_SECURITY.md  MCP_Resources_Zero_Arg_Tools_Research.md  OLD_GHIDRA_PRACTICAL_RE_GUIDE.md  PROJECT_LOCKING.md  Podman-Windows-Complete-Setup-Guide.md  PyGhidra_API_Reference.md  PyGhidra_API_Reference_AUDIT.md  QUICKSTART_IMPORT_EXPORT.md  SHARED_PROJECT_AUTHENTICATION.md  STRUCTURE_SIZE_PRESERVATION.md  SharedProjectCLI.md  UPSTREAM_TOOLS_ANALYSIS.md  USAGE.md  agent-native-review-prompt-providers.md  e2e_shared_local_checkout_sync.md  mcp.example.json  session-handling.md
examples/: usage_validation.ipynb
helper_scripts/: YouTube-Transcript.ps1  generate_tools_list.py  integration_test.py  mcp_cli_testing.py  mcp_remote_matrix.py  migrate_k1_metadata.py  performance_benchmark.py  probe_public_sample_contract.py  python_lsp_mermaid.py  reorder_tools_list_canonical.py  rewrite_tabs.py  run_live_agdec_http_test.py  tree.ps1  update_headers.py
scripts/: add_env_fallback.py  add_import.py  add_shared_import_to_docker.py  analyze_profile.py  contextstream_claude_hook.ps1  create_ghidra_repo.py  create_repo_in_container.sh  create_repo_via_backend.py  e2e_checkout_sync_plan_runner.ps1  extract_java_tools.py  fix_docker_project.py  fix_duplicate_check.py  fix_imports_final.py  fix_indent_properly.py  fix_indentation.py  fix_missing_if.py  inject_diagnostic_logs.py  integration_test.py  lfg_cmd_sequence.ps1  lfg_validation.py  lfg_watch_driver.ps1  migration_complete.py  patch_docker_project.py  patch_import_for_shared.py  patch_old_code.py  run_cli.ps1  run_cli.sh  run_shared_project_e2e.py  safe_patch_docker.py  set_ghidra_user_password.py  stop_remove_and_install.ps1  strip_adc_wide_blocks.py  strip_diagnostic_logs.py  test_shared_project.ps1  test_shared_project.py  verify_shared_project_full.py
src/: CLAUDE.md
src/test.slow/: CLAUDE.md
tests/: README.md  __init__.py  conftest.py  e2e_project_lifecycle_helpers.py  helpers.py  requirements.txt  test_bridge_raw_backend_local_mock.py  test_canonical_tool_parity.py  test_cli_connect_mode.py  test_cli_dynamic.py  test_cli_e2e.py  test_cli_helpers.py  test_cli_local_fallback.py  test_cli_program_default_options.py  test_cli_project_manager.py  test_cli_result_limiter_options.py  test_cli_tools_list_contract.py  test_config.py  test_conflict_system.py  test_debug_info_profiling.py  test_decompiler_util.py  test_domain_folder_listing.py  test_dynamic_tool_executor.py  test_e2e_cancelled_profile.py  test_e2e_docker_shared_project.py  test_e2e_exhaustive_tool_contracts.py  test_e2e_local_terminal_contracts.py  test_e2e_project_lifecycle.py  test_e2e_standalone_proxy_cli.py  test_e2e_tool_sweep.py  test_e2e_workflow.py  test_export_formats.py  test_get_function_expansion.py  test_get_function_live_decompilation.py  test_helper_scripts_cli.py  test_import_e2e.py  test_integration_7_commands.py  test_integration_analysis.py  test_integration_proxy_servers.py  test_integration_server_proxy_mode.py  (+59 more)
(+313 files in other folders)
