[project]
name = "agentdecompile"
dynamic = ["version"]
description = "AgentDecompile - Your AI companion for Ghidra. Automate reverse engineering with AI-powered code analysis."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GNU Affero General Public License v3.0 (AGPL-3.0)"}
authors = [
    {name = "Boden", email = "contact@bolabaden.org"}
]
maintainers = [
    {name = "Boden", email = "contact@bolabaden.org"}
]
keywords = [
    "ai",
    "binary-analysis",
    "claude",
    "decompiler",
    "disassembly",
    "ghidra",
    "mcp",
    "reverse-engineering",
    "security-research"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Disassemblers",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "click>=8.3.1",
    "fastapi>=0.134.0",
    "httpx-sse>=0.4.3",
    "httpx>=0.28.1,<1.0",
    "mcp>=1.26.0",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
    "pyghidra>=3.0.2",
    "starlette>=0.52.1",
    "uvicorn>=0.41.0",
    "ghidra-stubs>=12.0.2",
    "pip>=26.0.1",
]

[project.urls]
Homepage = "https://github.com/bolabaden/AgentDecompile"
Documentation = "https://github.com/bolabaden/AgentDecompile#readme"
Repository = "https://github.com/bolabaden/AgentDecompile"
Issues = "https://github.com/bolabaden/AgentDecompile/issues"
Changelog = "https://github.com/bolabaden/AgentDecompile/releases"

[project.scripts]
# CLI inspired by pyghidra-mcp project.
agentdecompile        = "agentdecompile_cli.cli:main"
agentdecompile-cli    = "agentdecompile_cli.cli:main"
# MCP stdio entrypoint.
agentdecompile-mcp    = "agentdecompile_cli.__main__:main"
mcp_agentdecompile    = "agentdecompile_cli.__main__:main"
mcp-agentdecompile    = "agentdecompile_cli.__main__:main"
# STDIO/Streamable-http/sse server entry point.
agentdecompile-server = "agentdecompile_cli.server:main"

[project.optional-dependencies]
semantic = [
  "chromadb>=1.5.2",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.0.0",
    "pytest-sugar>=0.9.0",
]

[build-system]
requires = [
    "setuptools>=82.0.0",
    "setuptools_scm>=9.2.2",
    "wheel>=0.42.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["agentdecompile_cli*"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-sugar>=1.1.1",
    "pytest-timeout>=2.0.0",
    "pytest>=9.0.2",
]

[tool.setuptools_scm]
# Extract version from git tags (e.g., v5.0.0 -> 5.0.0)
# Fallback to 0.0.0.dev0 if no tags found
version_file = "src/agentdecompile_cli/_version.py"



########################################################
## define only linter configurations below this point ##
########################################################

[tool.bandit]
skips = ["B101", "B601"]
tests = ["B201", "B301"]

[tool.black]
exclude = '''
/(
    \.git
| \.hg
| \.github
| \.mypy_cache
| \.tox
| \.venv
| venv
| _build
| buck-out
| build
| __pycache__
| dist
| nuitka_dist
| \.history
| \.idea
| \.chat
| \.ruff_cache
| \.trunk
| .mdx
| .mdl
)/
'''
include = '\.pyi?$'
line-length = 175
skip-magic-trailing-comma = false
target-version = ['py38']

[tool.isort]
atomic = true
line_length = 175
multi_line_output = 3
profile = "black"
skip_gitignore = true

[tool.mccabe]
max-complexity = 25

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = false
exclude = [
  "\\.mypy_cache",
  "\\.venv",
  "__pycache__",
  "build",
  "dist",
  "tests/results",
  "venv"
]
explicit_package_bases = true
mypy_path = [
  "src/agentdecompile_cli",
  "tests"
]
namespace_packages = true
no_implicit_optional = true
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pylintrc]
max-line-length = 200

[tool.pyright]
analyzeUnannotatedFunctions = true
deprecateTypingAliases = false
exclude = [
  "**/.*/**",
  "**/.venv/**",
  "**/__pycache__/**",
  "**/build/**",
  "**/dist/**",
  "**/node_modules/**",
  "**/vendor/**",
  "**/venv/**"
]
extraPaths = [
  "src/agentdecompile_cli",
  "tests"
]
include = ["*.py"]
pythonVersion = "3.8"
reportMissingImports = true
reportMissingTypeStubs = false
typeCheckingMode = "basic"

[tool.pyright.defineConstant]
PYQT5 = false
PYQT6 = true
PYSIDE2 = false
PYSIDE6 = false

[tool.pytest.ini_options]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
#addopts = "-ra -q -m \"not slow\""
markers = [
    "cli: All CLI-specific tests",
    "e2e: End-to-end tests via subprocess",
    "gui: marks tests that require a GUI (deselect with '-m \"not gui\"')",
    "integration: Integration tests with real PyGhidra",
    "slow: marks tests that are slow (deselect with '-m \"not slow\"')",
    "unit: Fast unit tests with mocked dependencies",
]
log_cli = true
log_cli_format = "%(message)s"
log_cli_level = "CRITICAL"
log_file = "pytest.log"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_level = "DEBUG"
testpaths = [
  "tests"
]
# Timeout configuration (pytest-timeout)
timeout = 120 # 2 minutes per test
timeout_method = "thread" # Use thread-based timeout (works on Windows)

[tool.ruff]
fix = true
force-exclude = true
line-length = 175
output-format = "grouped" # Group violations by containing file.
# Enable preview features.
preview = false
respect-gitignore = false
show-fixes = true
src = [
  "src/agentdecompile_cli",
  "tests"
]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
preview = false
skip-magic-trailing-comma = false

[tool.ruff.lint]
exclude = [".venv", ".venv*"]
external = ["V"]
ignore = [
  # The following rules are too strict to be realistically used by ruff:
  "ANN002", # Checks that function *args arguments have type annotations.
  "ANN003", # Checks that function **kwargs arguments have type annotations.
  "ANN204", # Missing return type annotation for special method
  "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in {name}
  "ARG002", # Unused method argument: `method`
  "BLE001", # Do not catch blind exception: `Exception`
  "C901", # Function is too complex
  "COM812", # missing-trailing-comma
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D102", # Missing docstring in public method
  "D103", # Missing docstring in public function
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
  "D107", # Missing docstring in __init__
  "D205", # 1 blank line required between summary line and description
  "D401", # First line of docstring should be in imperative mood
  "D413", # Missing blank line after last section 'xyz'
  "D417", # Missing argument description in the docstring for {definition}: {name}
  # The following are currently violated by the codebase.
  # "D205",     # 1 blank line required between summary line and description
  "E402", # Module level import not at top of file
  "EM101", # Exception must not use a string literal, assign to variable first
  "EM102", # Exception must not use an f-string literal, assign to variable first
  "ERA001", # Found commented out code.
  "G004", # Logging statement uses f'' string.
  # "FIX004",   # Line contains HACK, consider resolving the issue
  # "PD901",    # df is a bad variable name. Be kinder to your future self.
  # "PLR2004",  # Magic value used in comparison, consider replacing X with a constant variable
  # "S101",     # Use of assert detected
  # "S314",     # Using `xml` to parse untrusted data is known to be vulnerable to XML attacks; use `defusedxml` equivalents
  # "S605",     # Starting a process with a shell, possible injection detected
  # "SLF001",   # Private member accessed
  #
  # According to ruff documentation, the following rules should be avoided when using its formatter:
  #
  # "W191",     # tab-indentation
  # "E111",     # indentation-with-invalid-multiple
  # "E114",     # indentation-with-invalid-multiple-comment
  # "E117",     # over-indented
  # "D206",     # indent-with-spaces
  # "D300",     # triple-single-quotes
  # "Q000",     # bad-quotes-inline-string
  # "Q001",     # bad-quotes-multiline-string
  # "Q002",     # bad-quotes-docstring
  # "Q003",     # avoidable-escaped-quote
  # "COM812",   # missing-trailing-comma
  # "COM819",   # prohibited-trailing-comma
  "ISC001",
  "N802", # Function name `screenToWorld` should be lowercase
  "N806", # Variable `jumpToOffset` in function should be lowercase
  "N815", # Variable `var` in class scope should not be mixedCase
  "PERF203", # `try`-`except` within a loop incurs performance overhead
  "PLC0415", # `import` should be at the top-level of a file
  "PLR0904", # Too many public methods
  "PLR0911", # Too many return statements
  "PLR0912", # Too many branches
  "PLR0913", # Too many arguments to function call (N > 5)
  "PLR0915", # Too many statements
  "PLR2004", # Magic value used in comparison, consider replacing X with a constant variable
  "RET504", # Unnecessary assignment to `varname` before `return` statement
  "RUF100", # Unused `noqa` directive (non-enabled: `PLC0415`)
  "S101", # Use of `assert` detected.
  "SIM108", # Use ternary operator instead of 'if' 'else' block
  "SIM114", # Combine `if` branches using logical `or` operator
  "T201", # 'print' detected
  "TD001", # Invalid TODO tag: `FIXME`
  "TRY003" # Avoid specifying long messages outside the exception class
]
task-tags = ["FIXME", "HACK", "TODO"]
unfixable = [
  "ERA001",
  "F841",
  "N815",
  "RUF100" # Unused `noqa` directive
]

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true
mypy-init-return = true
suppress-none-returning = true

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "list"
parametrize-values-row-type = "list"
parametrize-values-type = "list" # default
raises-require-match-for = ["requests.RequestException"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all" # Disallow all relative imports.

[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["typing", "typing_extensions"]
# Add quotes around type annotations, if doing so would allow an import to be moved into a type-checking block.
quote-annotations = true # Does nothing when from __future__ import annotations is used
strict = true

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
force-wrap-aliases = false
lines-between-types = 1
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"*.pyi" = [
  "I002" # from __future__ import annotations
]
".github/*py" = ["INP001"]
"__init__.py" = ["F401", "I001", "I002", "TID252"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 200

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = false

[tool.style]
based_on_style = "google"
split_arguments_when_comma_terminated = true
split_before_named_assigns = true
split_complex_comprehension = true

[tool.yapf]
ALLOW_SPLIT_BEFORE_DEFAULT_OR_NAMED_ASSIGNS = false
ALLOW_SPLIT_BEFORE_DICT_VALUE = false
DISABLE_SPLIT_LIST_WITH_COMMENT = true
INDENT_DICTIONARY_VALUE = true
column_limit = 175
join_multiple_lines = false
no_spaces_around_selected_binary_operators = "*,/"
split_before_dict_set_generator = true
split_before_expression_after_opening_paren = false
split_complex_comprehension = true
split_penalty_after_opening_bracket = 50
split_penalty_excess_character = 75 # Lower penalty for going over the column limit
split_penalty_for_added_line_split = 100 # Discourage adding new line splits
