[metadata]
name = agentdecompile
version = 0.1.0
description = A tool for decompiling and analyzing agent data.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/agentdecompile
license = MIT

[options]
packages = find:
package_dir =
    = src
install_requires =
    # List your dependencies here
    # e.g., requests>=2.25.1
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    agentdecompile = agentdecompile.cli:CLI.main